<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#37E63A"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="382dp"
        android:layout_height="709dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>

        <TableLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TableRow
                android:layout_width="200dp"
                android:layout_height="400dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="15dp"
                    app:cardPreventCornerOverlap="false"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:background="#FBC02D"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="282dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/bangers"
                            android:gravity="right"
                            android:text="@string/descripcion_aprende"
                            android:textColor="#070000"
                            android:textSize="24sp"
                            app:drawableTint="#5F6836" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView"
                                android:layout_width="75dp"
                                android:layout_height="75dp"
                                app:srcCompat="@drawable/aprende" />

                            <Button
                                android:id="@+id/aprende"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/boton_redondo"
                                android:fontFamily="@font/bangers"
                                android:onClick="irAprende"
                                android:text="@string/APRENDE_BTN"
                                android:textSize="20sp" />
                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="15dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:background="#07F6B3"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/bangers"
                            android:text="@string/descripcion_informate"
                            android:textColor="#040000"
                            android:textSize="20sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView1"
                                android:layout_width="75dp"
                                android:layout_height="75dp"
                                app:srcCompat="@drawable/informacion" />

                            <Button
                                android:id="@+id/informate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/boton_redondo"
                                android:fontFamily="@font/bangers"
                                android:onClick="irInformate"
                                android:text="@string/INFORMATE_BTN"
                                android:textSize="20sp" />
                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="1dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:background="#FF3737"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="282dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/bangers"
                            android:text="@string/descripcion_noticias"
                            android:textColor="#000000"
                            android:textColorHint="#FFFFFF"
                            android:textSize="20sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView2"
                                android:layout_width="75dp"
                                android:layout_height="75dp"
                                app:srcCompat="@drawable/periodico" />

                            <Button
                                android:id="@+id/noticias"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/boton_redondo"
                                android:fontFamily="@font/bangers"
                                android:onClick="irNoticias"
                                android:text="@string/NOTICIAS_BTN"
                                android:textSize="20sp" />
                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#B52525"
                    app:cardCornerRadius="15dp"
                    app:cardPreventCornerOverlap="false">

                    <LinearLayout
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:background="#C042FF"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/bangers"
                            android:text="@string/descripcion_libros"
                            android:textColor="#000000"
                            android:textSize="20sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView3"
                                android:layout_width="75dp"
                                android:layout_height="75dp"
                                app:srcCompat="@drawable/libro" />

                            <Button
                                android:id="@+id/libros"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/boton_redondo"
                                android:fontFamily="@font/bangers"
                                android:onClick="irLibros"
                                android:text="@string/LIBROS_BTN"
                                android:textSize="20sp" />
                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="15dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:background="#FF7509"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/bangers"
                            android:text="@string/descripcion_contactos"
                            android:textColor="#070000"
                            android:textSize="18sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView4"
                                android:layout_width="75dp"
                                android:layout_height="75dp"
                                app:srcCompat="@drawable/agenda" />

                            <Button
                                android:id="@+id/contactos"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/boton_redondo"
                                android:fontFamily="@font/bangers"
                                android:onClick="irContactos"
                                android:text="@string/CONTACTOS_BTN"
                                android:textSize="20sp" />
                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/sign_out_btn"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:background="@drawable/boton_redondo"
            android:onClick="CerrarSesion"
            android:text="Cerrar Sesion!"
            android:textColor="#000" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>